feat: add gallery API pagination
